# get_seg_3d_coord

./: CMakeLists.txt  package.xml
config/: params.yaml
launch/: segmented_lidar_cluster.launch.py
scripts/: local_search_node.py  segmented_lidar_cluster_node.py
src/: local_search.cpp  segmented_lidar_cluster_node.cpp  table_person_association.cpp
