<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>get_seg_3d_coord</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="adgjl06@naver.com">gw</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>message_filters</depend>
  <depend>opencv4</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>vision_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>inha_interfaces</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
